<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".CheckAsset" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/upanddown"
        android:gravity="center"
        android:text="@string/eqdetails"
        android:textColor="@color/contents_text"
        android:textSize="20sp" />
	<ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >
    	<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="0dip"
	        android:orientation="vertical"
	        android:paddingLeft="10dip" >
	        <TextView
	            android:id="@+id/textViewDetails"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:textSize="16sp" 
	            android:textColor="@color/contents_text"/>
    	</LinearLayout>
     </ScrollView>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/upanddown"
        android:orientation="horizontal"
        android:gravity="center" >
         <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" 
            android:textColor="@color/contents_text"
            android:drawableLeft="@drawable/baofeisel"
            android:gravity="center"
            android:layout_marginRight="5dip"
            android:text="@string/baofeit"
            android:clickable="true"/>
          <TextView
            android:id="@+id/textViewOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" 
            android:textColor="@color/contents_text"
            android:drawableLeft="@drawable/editsel"
            android:gravity="center"
            android:layout_marginLeft="5dip"
            android:text="@string/editit"
            android:clickable="true"/>
    </LinearLayout>

</LinearLayout>