<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".CheckAsset" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="@color/upanddown"
        android:gravity="center"
        android:text="@string/checktitle"
        android:textColor="@color/contents_text"
        android:textSize="20sp" />
	<ScrollView
            android:id="@+id/scrollview_equip_2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="10dip" >
        <TextView
            android:id="@+id/textViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:textSize="16sp" 
            android:textColor="@color/contents_text"
            android:autoLink="phone"/>
        
    </LinearLayout>
     </ScrollView>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/upanddown"
        android:orientation="horizontal"
        android:gravity="center"
        >
         <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" 
            android:textColor="@color/contents_text"
            android:drawableLeft="@drawable/detailssel"
            android:gravity="center"
            android:layout_marginRight="5dip"
            android:text="@string/eqdetails"
            android:clickable="true"
            android:onClick="detailClick"/>
          <TextView
            android:id="@+id/textViewOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" 
            android:textColor="@color/contents_text"
            android:drawableLeft="@drawable/searchsel"
            android:gravity="center"
            android:layout_marginLeft="5dip"
            android:text="@string/searchhim"
            android:clickable="true"
            android:onClick="searchClick"/>
    </LinearLayout>

</LinearLayout>